--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.8.10",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "eslint-plugin-import": "^2.20.0"
   }
 }
