--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "champs",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -15,6 +15,8 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0"
   }
 }
