--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "nodemon": "nodemon node ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^3.0.7",
@@ -16,9 +17,11 @@
     "mongoose": "^5.8.10",
     "morgan": "~1.9.1"
   },
+  "main": "./bin/www",
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.0"
+    "eslint-plugin-import": "^2.20.0",
+    "nodemon": "^2.0.2"
   }
 }
